--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=192.168.31.56
-DB_PORT=5432
-DB_DATABASE=db_premilitares
-DB_USERNAME=postgres
-DB_PASSWORD=123
+DB_HOST=
+DB_PORT=55555
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
